# robo-bivouac

./: Cargo.toml  README.md
rb_cli/: Cargo.toml  package.xml
rb_cli/src/: lib.rs
rb_cli/src/command_line/: cli.rs
rb_core/: Cargo.toml  package.xml
scripts/: start-bat-adhoc.sh
